[package]
name = "containert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["sched", "fs", "process"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tar = "0.4"
tempfile = "3.2"
serde_json = "1.0"
clap = "4.4.6"
cgroups-rs = "0.3.3"
